Fix wrong search placeholder text color in dark mode

--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -335,7 +335,7 @@
         color: var(--strapi-dark-100);
         
         .docsearch-btn-placeholder {
-          color: var(--strapi-dark-100);
+          color: var(--strapi-neutral-400);
         }
         
         &:hover {
